specified height and overflow in users circuit tab. also corrected some css properties in UX.css and some html properties in testbench.html

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -302,6 +302,8 @@
   .users-circuits-tab {
     font-size: 16px;
     padding: 4px 15px;
+    height: 80vh;
+    overflow: auto;
   }
 }
 //user profile ends
